# stereoFeatureTracking

./: .gitignore  CMakeLists.txt  README.md  build_stvo.sh  doc.md  package.xml  rm_stvo_built.sh
cfg/: SparseStereoTester.cfg
config/: config.yaml  global_costmap.yaml  global_planner.yaml  kinect_turtlebot_rgbd.yaml  multisense_camera.yaml
include/: dynamic_reconfigurable_param.h  local_octomap_generator.h  orb_slam_rgbd_processor.h  orb_slam_sparse_stereo_processor.h  pips_sparse_stereo_processor.h
launch/: elas_stereo2octomap.launch  gazebo_stereo.launch  image_decimation.launch  kitti_sync_global_octomap.launch  octomap_mapping.launch  orb_slam_rgbd.launch  orb_slam_sparse_stereo.launch  pips_sparse_depth_controller.launch  point2GlobalOctomap.launch  real_rosbag_sparse_stereo.launch  real_test_editor.launch  rosbag_play.launch  sparse_real_test.launch  sparse_stereo.launch  sparse_stereo_duo.launch  sparse_stereo_gazebo_complicate.launch  sparse_stereo_gazebo_simple.launch  sparse_stereo_kitti_tester.launch  sparse_stereo_obstacle_controller.launch  sparse_stereo_realbag_tester.launch  stereo2pointcloud_euroc.launch  stereo2pointcloud_kitti_extract.launch  stereo2pointcloud_kitti_extract_new.launch  stereo2pointcloud_kitti_sync.launch  stereo2pointcloud_turtlebot.launch
rviz/: elas_stereo2octomap.rviz  pointcloud2octomap.rviz  sparse_stereo_depth_learning_gazebo.rviz  sparse_stereo_gazebo.rviz  stereo2pointcloud.rviz  stereo2pointcloud.rviz~  vs_vis.rviz
src/: cubic_spline_interpolator.cpp  depth_image_tester.cpp  image_blur_node.cpp  local_octomap_generator.cpp  local_octomap_generator_node.cpp  orb_slam_rgbd_node.cpp  orb_slam_rgbd_processor.cpp  orb_slam_sparse_stereo_node.cpp  orb_slam_sparse_stereo_processor.cpp  pips_sparse_stereo_node.cpp  pips_sparse_stereo_processor.cpp
stvo/: CMakeLists.txt
stvo/include/: ORBextractor.h  auxiliar.h  config.h  dataset.h  gridStructure.h  lineIterator.h  matching.h  pinholeStereoCamera.h  stereoFeatures.h  stereoFrame.h  stereoFrameHandler.h  timer.h
stvo/src/: auxiliar.cpp  config.cpp  dataset.cpp  gridStructure.cpp  lineIterator.cpp  matching.cpp  pinholeStereoCamera.cpp  stereoFeatures.cpp  stereoFrame.cpp  stereoFrameHandler.cpp  timer.cpp
